tests/neg/semantic_arrow_requires_struct_pointer.baa
// EXPECT: الوصول '->' يتطلب مؤشراً إلى هيكل أو اتحاد

صحيح الرئيسية() {
    صحيح قيمة = ٠.
    إرجع قيمة->عضو.
}
